test/logicShortCircuit1.slq

def main(){
	a:=[];
	if false && a[0]==-1 { } // error
	if true || a[0]==-1 { } // error
}
